Removing too high default permsize